--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "twitter": "^1.7.0",
     "watson-developer-cloud": "^2.14.6"
   }
 }
